# meta-system

./: .dockerignore  .gitignore  ADD_BIOCONTAINERS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  biocontainers.yaml  biocontainers_mini.yaml  biocontainers_utils.py  circus.ini  docker-compose.yaml  docker-entrypoint.sh  load_images.sh  mkdocs.yml  pyproject.toml  read_types.yaml  requirements.txt  run_app.py
.github/: ISSUE_TEMPLATE.md
app/: .eslintrc.js  babel.config.js  jest.config.js  package-lock.json  package.json  vue.config.js
app/public/: index.html
app/src/: App.vue  main.js
data/: sample_abundance_profile.tsv
docs/: add_biocontainers.md  contributing.md  index.md
shared/: config.py  log.py
system/: __init__.py  classify.py  evaluate.py  extensions.py  job_queue_manager.py  simulate.py
system/api/: __init__.py  database.py  info.py  jobs.py  results.py  web.py
system/controllers/: classification_job.py  controllers.py  evaluation_job.py  job_queue.py  simulation_job.py  user.py  user_job.py
system/models/: __init__.py  job_manager.py  metrics.py  schemas.py  schemas_loader.py
system/utils/: biocontainers.py  biology.py  encoder.py  errors.py  job_failure.py  readtypes.py  security.py  zip.py
tests/: __init__.py  test_foo.py
tests/data/: mock.fastq  mock.tsv  mock_auc.tsv  mock_bad_err1.fastq  mock_bad_err1.tsv  mock_bad_err2.fastq  mock_bad_err2.tsv  mock_bad_err3.fastq  mock_biocontainers.yaml  mock_error_test  mock_read_types.yaml  mock_taxid.abu.ts.padded  mock_taxid_hierarchy_tree.json
tests/system/: __init__.py  (+4 more)
(+307 files in other folders)
